Tratamento de erros do formulario e envio de arquivo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,45 @@
+#
+#   spring mvc properties
+#
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
+spring.mvc.date-format=dd/MM/yyyy
 
+#
+#   datasource properties
+#
 spring.datasource.url=jdbc:postgresql://localhost:5432/casadocodigo
 spring.datasource.username=postgres
 spring.datasource.password=docker
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+#
+#   jpa properties
+#
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto = update
 
+#
+#   http encoding properties
+#
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 spring.http.encoding.force=true
+
+#
+#   messages source properties
+#
+spring.messages.encoding=UTF-8
+spring.messages.cache-duration=1
+
+#
+#   multipart properties
+#
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
+
+#
+#   infra properties
+#
