Implementando chama a api para finalizar compra

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.mvc.date-format=dd/MM/yyyy
 #
 #   datasource properties
 #
-spring.datasource.url=jdbc:postgresql://localhost:5432/casadocodigo
+spring.datasource.url=jdbc:postgresql://localhost:5432/bookscode
 spring.datasource.username=postgres
 spring.datasource.password=docker
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -39,3 +39,8 @@ spring.messages.cache-duration=1
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
+
+#
+# payment url
+#
+application.payment.url = http://book-payment.herokuapp.com/payment
